WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302955
[css-grid] Fix code style in RenderGrid: correct spacing around operators
https://bugs.webkit.org/show_bug.cgi?id=302955
Summary
[css-grid] Fix code style in RenderGrid: correct spacing around operators
Brandon
Reported
2025-11-21 09:14:44 PST
Remove extraneous whitespace around comparison operators to conform to WebKit code style guidelines.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-21 09:14:51 PST
<
rdar://problem/165217048
>
Brandon
Comment 2
2025-11-21 09:20:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54329
EWS
Comment 3
2025-11-21 13:39:51 PST
Committed
303418@main
(115c2c44620a): <
https://commits.webkit.org/303418@main
> Reviewed commits have been landed. Closing PR #54329 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug