[css-grid] Fix code style in RenderGrid: correct spacing around operators https://bugs.webkit.org/show_bug.cgi?id=302955 rdar://problem/165217048

Reviewed by Tim Nguyen and Sammy Gill.

Remove extraneous whitespace around comparison operators to conform to WebKit code style guidelines.

* Source/WebCore/rendering/RenderGrid.cpp
* Source/WebCore/rendering/RenderGrid.h

Canonical link: https://commits.webkit.org/303418@main